# Streamlit-Autoform

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
streamlit_autoform/: __init__.py  autoform.py
tests/: test_autoform.py
